azure-base-infrastructure/modules/network-security-group/main.tf

# Create Network Security Group and rules
resource "azurerm_network_security_group" "nsg" {
  name                = "${var.vmname}-NSG"
  location            = var.location
  resource_group_name = var.resource_group_name    

  /* security_rule {
    name                       = "RDP"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "web"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  } */
}
